--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ incremental = false
 codegen-units = 1
 
 [workspace.dependencies]
-anchor-gen = { git = "https://github.com/ChewingGlass/anchor-gen.git" }
-anchor-lang = "0.28.0"
+anchor-gen = { git = "https://github.com/Max2405071139/anchor-gen" }
+anchor-lang = "0.29.0"
 solana-program = "1.16.13"
